// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-tab-buttons renders button size:small 1`] = `
<c-tab-buttons size="small">
  <mock:shadow-root>
    <div class="c-tab-buttons">
      <slot></slot>
    </div>
  </mock:shadow-root>
  <c-button class="c-button--active" data-index="0">
    <mock:shadow-root>
      <button class="grouped" role="button" tabindex="0">
        <div class="c-button c-button--grouped c-button--small grouped">
          <div class="c-button__content">
            <slot name="icon"></slot>
            <slot></slot>
          </div>
        </div>
      </button>
    </mock:shadow-root>
    One
  </c-button>
  <c-button data-index="1">
    <mock:shadow-root>
      <button class="grouped" role="button" tabindex="0">
        <div class="c-button c-button--grouped c-button--outlined c-button--small grouped">
          <div class="c-button__content">
            <slot name="icon"></slot>
            <slot></slot>
          </div>
        </div>
      </button>
    </mock:shadow-root>
    Two
  </c-button>
  <c-button data-index="2">
    <mock:shadow-root>
      <button class="grouped" role="button" tabindex="0">
        <div class="c-button c-button--grouped c-button--outlined c-button--small grouped">
          <div class="c-button__content">
            <slot name="icon"></slot>
            <slot></slot>
          </div>
        </div>
      </button>
    </mock:shadow-root>
    Three
  </c-button>
</c-tab-buttons>
`;

exports[`c-tab-buttons renders default html 1`] = `
<c-tab-buttons>
  <mock:shadow-root>
    <div class="c-tab-buttons">
      <slot></slot>
    </div>
  </mock:shadow-root>
  <c-button class="c-button--active" data-index="0">
    <mock:shadow-root>
      <button class="grouped" role="button" tabindex="0">
        <div class="c-button c-button--grouped grouped">
          <div class="c-button__content">
            <slot name="icon"></slot>
            <slot></slot>
          </div>
        </div>
      </button>
    </mock:shadow-root>
    One
  </c-button>
  <c-button data-index="1">
    <mock:shadow-root>
      <button class="grouped" role="button" tabindex="0">
        <div class="c-button c-button--grouped c-button--outlined grouped">
          <div class="c-button__content">
            <slot name="icon"></slot>
            <slot></slot>
          </div>
        </div>
      </button>
    </mock:shadow-root>
    Two
  </c-button>
  <c-button data-index="2">
    <mock:shadow-root>
      <button class="grouped" role="button" tabindex="0">
        <div class="c-button c-button--grouped c-button--outlined grouped">
          <div class="c-button__content">
            <slot name="icon"></slot>
            <slot></slot>
          </div>
        </div>
      </button>
    </mock:shadow-root>
    Three
  </c-button>
</c-tab-buttons>
`;

exports[`c-tab-buttons renders disabled buttons 1`] = `
<c-tab-buttons disabled="">
  <mock:shadow-root>
    <div class="c-tab-buttons c-tab-buttons--disabled">
      <slot></slot>
    </div>
  </mock:shadow-root>
  <c-button class="c-button--active" data-index="0" disabled="">
    <mock:shadow-root>
      <button class="grouped" disabled="" role="button" tabindex="-1">
        <div class="c-button c-button--disabled c-button--grouped grouped">
          <div class="c-button__content">
            <slot name="icon"></slot>
            <slot></slot>
          </div>
        </div>
      </button>
    </mock:shadow-root>
    One
  </c-button>
  <c-button data-index="1" disabled="">
    <mock:shadow-root>
      <button class="grouped" disabled="" role="button" tabindex="-1">
        <div class="c-button c-button--disabled c-button--grouped c-button--outlined grouped">
          <div class="c-button__content">
            <slot name="icon"></slot>
            <slot></slot>
          </div>
        </div>
      </button>
    </mock:shadow-root>
    Two
  </c-button>
  <c-button data-index="2" disabled="">
    <mock:shadow-root>
      <button class="grouped" disabled="" role="button" tabindex="-1">
        <div class="c-button c-button--disabled c-button--grouped c-button--outlined grouped">
          <div class="c-button__content">
            <slot name="icon"></slot>
            <slot></slot>
          </div>
        </div>
      </button>
    </mock:shadow-root>
    Three
  </c-button>
</c-tab-buttons>
`;
